@startuml 13Correo
class sucursal{
    -num : int
    -domicilio : string
    -localidad : string
    -carteros : [cartero]
    -administrativos : [administrativos]
    -enviosEnSucursal : [envio]
    +recorridoDeEnvio(recorridosDeEnvio, envio) : camino
}

class central extends sucursal{
    -localidad : BuenosAires
}

class empleado{
    -nombre : string
    -id : string
}

class administrativo extends empleado{}

class cartero extends empleado{
    -enviosAEntregar : [envios]
}

class cliente{
    -nombre : string
    -direccion : string
    -codigoPostal : string
    -localidad : string
}
class envio{
    -destinatario : cliente
    -remitente : cliente
    -precio : float
    -id : string
    -sucursalActual : sucursal
    -carteroFinal : cartero
    -camino : camino
    +entregado() : bool
    +sucursalActual() : sucursal
    +enviararAProxSucursal() : void
    +entregaFinal(cartero) : void
}
class camino{
    -idEnvio : string
    -recorrido : [sucursalxTiempo]
    +cambiarRecorrido() : [sucursalxTiempo]
}
class recorridosDeEnvios{
    -caminos : [camino]
    +caminoDe(envio) : camino
}


class telegrama extends envio{
    -contenido : string
    -tipoDeTelegrama : tipoDeTelegrama

}

class giro extends envio{
    -importe : float
}

class carta extends envio{
    -sello : sello
    -tipoDeCarta : tipoDeCarta
}
class sello{
    +interpretar()
}
class selloRojo extends sello{
    +interpretar() : abonado en oficina
}
class selloNegro extends sello{
    +interpretar() : estampillas por valor de envio
}

class encomienda extends envio{
    -tipoDeEncomienda : tipoDeEncomienda
}
enum tipoDeEncomienda{
    personal
    paquetes
}
enum tipoDeCarta{
    expresa
    simple
    certificada
}
enum tipoDeTelegrama{
    carta documento
    telegrama por un evento determinado
    invitación
}
class sucursalxTiempo{
    -sucursal : sucursal
    -tiempo : string
    +timeStamp() : void
}
sucursal -->"*" envio
camino <-- envio
camino -->"*" sucursalxTiempo
sucursalxTiempo --> sucursal
tipoDeCarta -- carta
tipoDeTelegrama -- telegrama
tipoDeEncomienda -- encomienda
cliente "2"-->"*" envio
camino --* recorridosDeEnvios
sucursal -->"*" empleado
cartero -->"*" envio
carta --> sello
sucursal ..> recorridosDeEnvios
@enduml